# fotoscdo

./: docker-compose.yaml  env.example  readme.MD  requirements.txt
app/: main.py  pyproject.toml
app/core/: settings.py
app/db/: init_db.py  models.py  session.py
app/middleware/: request_context.py
app/routers/: health.py  photos.py
app/schemas/: photos.py
app/services/: image_service.py  sftp_client.py
app/test/: 1.0_Extraccion.py  2.0_Mapa.py  diagnose_gps.py
